Updated jQuery link to https to solve 'mixed content' error

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 </body> 
 
     <!-- jQuery -->
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
 
     <!-- Javascript -->
     <script type="text/javascript" src="assets/javascript/game.js"></script>   
