Changed header font

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Title -->
         <div class="jumbotron">
             <div class="Heading">
-                <h1 class="text-center">+* cRYStAL cOLLEctOR *+</h1>
+                <h1 class="text-center"> | Crystal Collector | </h1>
             </div>
         </div>
 
